tests/data/jwt-secrets/mergeable/jwt-secrets-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jwt-secrets-ingress-master
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "master"
spec:
  rules:
  - host: jwt-secrets.example.com
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jwt-secrets-ingress-backend1-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
spec:
  rules:
  - host: jwt-secrets.example.com
    http:
      paths:
      - path: /backend1
        backend:
          serviceName: backend1-svc
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jwt-secrets-ingress-backend2-minion
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.org/mergeable-ingress-type: "minion"
    nginx.com/jwt-key: "jwt-secrets-key"
    nginx.com/jwt-realm: "JWT Secrets App"
    nginx.com/jwt-token: "$cookie_auth_token"
    nginx.com/jwt-login-url: "https://login.jwt-secrets.example.com"
spec:
  rules:
  - host: jwt-secrets.example.com
    http:
      paths:
      - path: /backend2
        backend:
          serviceName: backend2-svc
          servicePort: 80
